<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/editTicketTitle"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_ticket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTicketLinearLayout"
        android:layout_marginTop="40dp">
    </TextView>

    <LinearLayout
        android:id="@+id/editTicketLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTicketTitle"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/type"
                android:textSize="18sp">
            </TextView>

            <Spinner
                android:id="@+id/editTicketTypeSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority"
                android:textSize="18sp">
            </TextView>

            <Spinner
                android:id="@+id/editTicketPrioritySpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <EditText
            android:id="@+id/editTicketEstEditText"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:minWidth="50dp"
            android:hint="@string/ticket_est"
            android:inputType="number">
        </EditText>

        <EditText
            android:id="@+id/editTicketTitleEditText"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:hint="@string/ticket_title">
        </EditText>

        <EditText
            android:id="@+id/editTicketDescEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:hint="@string/ticket_desc"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:scrollbars="vertical">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/saveTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTicketLinearLayout"
        android:layout_marginTop="40dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>