<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ticketDetailsImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ticketTitleTextView"
        android:layout_marginTop="40dp"
        app:layout_constraintVertical_chainStyle="packed">
    </ImageView>

    <TextView
        android:id="@+id/ticketTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketDetailsImageView"
        app:layout_constraintBottom_toTopOf="@+id/ticketDetailsGrid"
        android:layout_marginTop="20dp"
        android:textSize="25sp">
    </TextView>

    <GridLayout
        android:id="@+id/ticketDetailsGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketTitleTextView"
        app:layout_constraintBottom_toTopOf="@+id/ticketDescription"
        android:layout_marginTop="50dp"
        android:useDefaultMargins="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/type">
        </TextView>
        <TextView
            android:id="@+id/ticketType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/priority">
        </TextView>
        <TextView
            android:id="@+id/ticketPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/ticket_est">
        </TextView>
        <TextView
            android:id="@+id/ticketEstimation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/logged_time">
        </TextView>
        <Button
            android:id="@+id/loggedTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/ticket_desc">
        </TextView>
    </GridLayout>

    <TextView
        android:id="@+id/ticketDescription"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketDetailsGrid"
        app:layout_constraintBottom_toTopOf="@+id/openEditButton"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="18sp">
    </TextView>

    <Button
        android:id="@+id/openEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ticketDescription">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>